--- a/public/views/configurations/index.html
+++ b/public/views/configurations/index.html
@@ -15,7 +15,7 @@
                     <ul class="nav navbar-nav side-nav">
                         <li><a href="#/map"><i class="fa fa-map-marker"></i> Maps</a></li>
                         <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                        <li><a href="#/parameters"><i class="fa fa-cog"></i> Settings</a></li>
+                        <li><a href="#/settings"><i class="fa fa-cog"></i> Settings</a></li>
                         <li class="active"><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                     </ul>
                 </div>		
