--- a/public/views/settings/dynamicItemSettings.html
+++ b/public/views/settings/dynamicItemSettings.html
@@ -23,57 +23,28 @@
         
         <div id="page-wrapper">		
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#/settings">Recommender settings</a></li>
+                <li><a data-toggle="tab" href="#/settings">Recommender settings</a></li>
                 <li><a data-toggle="tab" href="#/settings/staticItemSettings">Static item settings</a></li>
-                <li><a data-toggle="tab" href="#/settings/dynamicItemSettings">Dynamic item settings</a></li>
+                <li class="active"><a data-toggle="tab" href="#/settings/dynamicItemSettings">Dynamic item settings</a></li>
             </ul>
             
             <div class="panel-body">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Add new recommender settings</h3>                        
+                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Add new dynamic item</h3>                        
                     </div>
 
                     <div class="panel-body">      
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Pool name</label>
+                                <label>Name</label>
                                 <input class="form-control" />
                             </div>
 
                             <div class="col-sm-4">
-                                <label>Recommender type</label>
-                                <select class="form-control">
-                                    <option value="nothing"></option>
-                                    <option value="push">Push</option>
-                                    <option value="pull">Pull</option>
-                                </select>
+                                <label>Icon</label>
+                                <input type="file" name='dynamicIcon'>
                             </div>
-                            
-                            <div class="col-sm-4">
-                                <label>Maximum distance to go (meters)</label>
-                                <input class="form-control" />
-                            </div>
-                            
-                            <div class="col-sm-4">
-                                </br>
-                                <label>Visibility radius (meters)</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
-                            <div class="col-sm-4">
-                                </br>
-                                <label>Number of items to recommend</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
-                             <div class="col-sm-4">
-                                 </br>
-                                <label>Minimum score for recommending an item</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
-                            
                             
                             <div class="col-sm-12">
                                 <br>
@@ -86,18 +57,14 @@
                 
                 <div class="panel panel-primary table-responsive">
                     <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-list-alt"></i> Recommender settings list</h3>
+                        <h3 class="panel-title"><i class="fa fa-list-alt"></i> Dynamic item list</h3>
                     </div>
 
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <td>Pool name</td>
-                                <td>Recommender type</td>
-                                <td>Maximum distance to go (meters)</td>
-                                <td>Visibility radius (meters)</td>
-                                <td>Number of items to recommend</td>
-                                <td>Minimum score for recommending an item</td>
+                                <td>Name</td>
+                                <td>Icon</td>
                                 <th></th>
                             </tr>
                         
@@ -106,11 +73,7 @@
                         <tbody>
                             <tr>
                                 <td>Parametros genericos</td>
-                                <td>Pull</td>
-                                <td>1500 m</td>
-                                <td>150 m</td>
-                                <td>10</td>
-                                <td>4</td>
+                                <td>icon</td>
                                 <td>
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
@@ -120,15 +83,15 @@
                                                 </button>
 
                                                 <ul class="dropdown-menu">
-                                                    <li><a href="#settings" role="button" 
+                                                    <li><a href="#/settings/dynamicItemSettings" role="button" 
                                                            data-toggle="modal" data-target="#editRecommenderModal">Edit setting</a></li>
 
-                                                    <li><a href="#settings" role="button" 
+                                                    <li><a href="#/settings/dynamicItemSettings" role="button" 
                                                            data-toggle="modal" data-target="#deleteRecommenderModal">Delete setting</a>
                                                     </li>
                                                 </ul>
                                             </div>
-                                        </ul>
+                                        </ul>                                    
                                 </td> 
                             </tr>
 
@@ -166,7 +129,7 @@
               </div>
                 
               <div class="modal-body">
-                <p>Are you sure you want to delete this parameters?</p>
+                <p>Are you sure you want to delete this item?</p>
               </div>
                 
               <div class="modal-footer">  
@@ -186,46 +149,19 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Edit recommender setting</h4>
+                <h4 class="modal-title">Edit dynamic item</h4>
               </div>
                 
               <div class="modal-body">
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Pool name</label>
+                                <label>Name</label>
                                 <input class="form-control" />
                             </div>
 
                             <div class="col-sm-4">
-                                <label>Recommender type</label>
-                                <select class="form-control">
-                                    <option value="nothing"></option>
-                                    <option value="push">Push</option>
-                                    <option value="pull">Pull</option>
-                                </select>
-                            </div>
-                            
-                            <div class="col-sm-4">
-                                <label>Maximum distance to go (meters)</label>
-                                <input class="form-control" />
-                            </div>
-                            
-                            <div class="col-sm-4">
-                                </br>
-                                <label>Visibility radius (meters)</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
-                            <div class="col-sm-4">
-                                </br>
-                                <label>Number of items to recommend</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
-                             <div class="col-sm-4">
-                                 </br>
-                                <label>Minimum score for recommending an item</label>
-                                <input class="form-control" type="text">
+                                <label>Icon</label>
+                                <input type="file" name='dynamicIcon'>
                             </div>
                         </div>
               </div>
