--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -181,12 +181,12 @@
                                     <h3>Static items settings</h3>
                                 </div>
                                 
-                                <div class="col-xs-12">
+                                <div class="col-xs-6">
                                     <label>Maximum number of static items to show</label>
                                     <input class="form-control" name='maxNumerStaticItemsShow'>
                                 </div>
                                 
-                                <div class="col-xs-12">
+                                <div class="col-xs-6">
                                     <label>Static items</label>    
                                     <input type="file" name='imgPerfil'>     
                                     <b>
@@ -195,6 +195,12 @@
                                         </i>
                                     </b>    
                                 </div>  
+                                
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-secondary">Left</button>
+                                    <button type="button" class="btn btn-secondary">Middle</button>
+                                    <button type="button" class="btn btn-secondary">Right</button>
+                                </div>
                                 
                             </div>
                             
